--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.o7planning</groupId>
-	<artifactId>HelloSpringMVC</artifactId>
+	<artifactId>EveryEvents</artifactId>
 	<packaging>war</packaging>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>HelloSpringMVC Maven Webapp</name>
@@ -124,7 +124,7 @@
 
 	</dependencies>
 	<build>
-		<finalName>HelloSpringMVC</finalName>
+		<finalName>EveryEvents</finalName>
 		 <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
